--- a/source/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/source/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -58,25 +58,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="collections\Genre.cs" />
-    <Compile Include="collections\IsInGenre.cs" />
-    <Compile Include="collections\IsPublishedBy.cs" />
     <Compile Include="collections\Movie.cs" />
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="collections\ReadOnlySetOf.cs" />
-    <Compile Include="utility\AndCriteria.cs" />
-    <Compile Include="utility\AnonymousMatch.cs" />
-    <Compile Include="utility\BinaryCriteria.cs" />
-    <Compile Include="utility\Condition.cs" />
-    <Compile Include="utility\CriteriaExtensions.cs" />
-    <Compile Include="utility\CriteriaFactory.cs" />
+    <Compile Include="utility\filtering\AndCriteria.cs" />
+    <Compile Include="utility\filtering\AnonymousMatch.cs" />
+    <Compile Include="utility\filtering\BinaryCriteria.cs" />
+    <Compile Include="utility\filtering\Condition.cs" />
+    <Compile Include="utility\filtering\CriteriaExtensions.cs" />
+    <Compile Include="utility\filtering\CriteriaFactory.cs" />
     <Compile Include="utility\EnumerableExtensions.cs" />
-    <Compile Include="utility\IMatchAn.cs" />
-    <Compile Include="utility\NeverMatchesAn.cs" />
-    <Compile Include="utility\PropertyAccessor.cs" />
-    <Compile Include="utility\NegatingCriteria.cs" />
-    <Compile Include="utility\OrCriteria.cs" />
-    <Compile Include="utility\Where.cs" />
+    <Compile Include="utility\filtering\IMatchAn.cs" />
+    <Compile Include="utility\filtering\NeverMatchesAn.cs" />
+    <Compile Include="utility\filtering\PropertyAccessor.cs" />
+    <Compile Include="utility\filtering\NegatingCriteria.cs" />
+    <Compile Include="utility\filtering\OrCriteria.cs" />
+    <Compile Include="utility\filtering\Where.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
